Fixes: autocorrection doesn't take capital letters into account

BUG:229328

This patch detects when the user typed a word that had at least
one uppercase character and follows that in the replacement.
Future enhancement might be to look at more characters, but for now
I think this is already a huge advancement.

Patch from Glen Kaukola, thank you! :-)

svn path=/trunk/koffice/; revision=1108260